--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,109 @@ credentials:
   - bairro: Eldorado
     cep: '32315020'
     cidade: Contagem
+    cpf_cnpj: '789.123.456-00'  # Valor fictício de CPF
+    created_at: '2024-01-17T00:00:00'
+    email: flavinhabinha@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Flavinha Binha
+    password: Flavinha2024
+    role: cliente
+    username: flavinha
+    whatsapp: '31912345685'  # Número fictício de WhatsApp
+
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
+    cpf_cnpj: '123.456.789-00'  # Valdisney Costa
+    created_at: '2024-01-17T00:00:00'
+    email: valdisneycosta@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Valdisney Costa
+    password: Valdisney2024
+    role: cliente
+    username: valdisney
+    whatsapp: '31912345678'  # Número fictício de WhatsApp
+
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
+    cpf_cnpj: '98765432100'  # Alexandre Costa
+    created_at: '2024-01-17T00:00:00'
+    email: alexandrecosta@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Alexandre Costa
+    password: Alexandre2024
+    role: cliente
+    username: xand
+    whatsapp: '31912345679'  # Número fictício de WhatsApp
+
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
+    cpf_cnpj: '12345678901'  # Daniela Costa
+    created_at: '2024-01-17T00:00:00'
+    email: danielacosta@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Daniela Costa
+    password: Daniela2024
+    role: cliente
+    username: daniela
+    whatsapp: '31912345680'  # Número fictício de WhatsApp
+
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
+    cpf_cnpj: '32165498700'  # Marilia Costa
+    created_at: '2024-01-17T00:00:00'
+    email: mariliacosta@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Marilia Costa
+    password: Marilia2024
+    role: cliente
+    username: marilia
+    whatsapp: '31912345681'  # Número fictício de WhatsApp
+
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
+    cpf_cnpj: '45678912300'  # Danielle Costa
+    created_at: '2024-01-17T00:00:00'
+    email: daniellecosta@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Danielle Costa
+    password: Danielle2024
+    role: cliente
+    username: dani
+    whatsapp: '31912345682'  # Número fictício de WhatsApp
+
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
+    cpf_cnpj: '65432198700'  # Regiane Santos
+    created_at: '2024-01-17T00:00:00'
+    email: regianesantos@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Regiane Santos
+    password: Regiane2024
+    role: cliente
+    username: regiane
+    whatsapp: '31912345683'  # Número fictício de WhatsApp
+
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
+    cpf_cnpj: '32165498700'  # Alan Costa
+    created_at: '2024-01-17T00:00:00'
+    email: alancosta@gmail.com
+    endereco: Rua Jose Barra do Nascimento
+    name: Alan Costa
+    password: Alan2024
+    role: parceiro
+    username: alan
+    whatsapp: '31912345684'
+  - bairro: Eldorado
+    cep: '32315020'
+    cidade: Contagem
     cpf_cnpj: 05940359612
     created_at: '2024-01-17T00:00:00'
     email: william@gmail.com
@@ -16,3 +119,5 @@ credentials:
     role: admin
     username: william
     whatsapp: '31996011180'
+ 
+    
